assets/scss/_content.scss
@import "colors";
@import "typography";

.menu-item,
.collection-item {
	position: relative;

	.grid-module-image {
		background-size: cover;
		background-position: center center;
		background-color: #FFF;
		opacity: 0.35;
		transform-style: preserve-3d;
		transition: all 300ms ease-out;
		box-shadow: 0px 0px 0px #fff inset;
	}

	&:hover {
		.grid-module-image {
			opacity: 0.9;
			box-shadow: 0px 0px 70px rgba( 255, 255, 255, 0.5) inset;
		}

		.module-name {
			text-shadow: 0px 0px 10px rgba( 255, 255, 255, 0.8 );
		}
	}

	a {
		text-transform: uppercase;
	}

	.module-name {
		text-shadow: 0px 1px 2px rgba( 0, 0, 0, 0.5 );
		transition: all 300ms ease-out;
		bottom: 15px;
		position: absolute;
	}

	.module-collection {
		font-size: $small;
		opacity: $half;
		display: block;
	}
}

.sidebar {

	.home-projects {
		margin-bottom: 0px;
	}

	.menu-item {
		.grid-module-image {
			opacity: 0.45;
			background: transparent;
		}

		&:hover {
			.grid-module-image {
				opacity: 0.45;
			}
			.module-name {
				color: rgba( 255, 255, 255, 0.75 );
			}
		}

		&.current-menu-item {
			.grid-module-image {
				background: transparent;
				opacity: 0.45;
				box-shadow: 0px 0px 70px rgba( 255, 255, 255, 0.5) inset;

			}
			.module-name {
				color: rgba( 255, 255, 255, 0.75 );
			}
		}

		.module-name {
			font-size: 14px;
			color: rgba( 255, 255, 255, 0.35 );
		}
	}
}

.collection-item {
	.grid-module {
		margin-top:10px;
		height: 230px;
	}
	.module-name {
		font-size: 24px;
	}
}

.entry-content {
	box-shadow: 0px 0px 70px rgba( 0, 0, 0, 0.35) inset;
	h1, h2, h3, p, li, strong, span, {
		text-shadow: 0px 1px 2px rgba( 0, 0, 0, 0.5 );
	}

	h1, p {
		margin-bottom: 20px;
	}

	h1 {
		font-size: $largest;
	}

	h2 {
		margin-top: 20px;
		margin-bottom: 15px;
		font-size: $medium;
		opacity: 0.55;
	}

	h3 {
		margin-bottom: 10px;
	}

	.featured-image.portfolio-image {
		height: 230px;
		margin-top: 2px;
		margin-bottom: -8px;
		border-radius: 5px;
		object-fit: cover;
	}

	.featured-image.large {
		height: 290px;
		width: 100%;
		margin-top: 0;
	}

	.grid-module-image {
		margin-top: 0;
	}

	.portfolio-images-container {
		margin-top: -5px;

		&.page {
			margin-top: 0;
		}
	}

	.portfolio-image-container {
		padding: 0px 5px 0 5px;

		img {
			transform-style: preserve-3d;
			transition: all 300ms ease-out;
			box-shadow: 0px 0px 0px #FFF inset;
		}

		&:hover img{
			opacity: 0.75;
			box-shadow: 0px 0px 70px rgba( 0, 0, 0, 0.55) inset;

		}

	}

	a {
		text-decoration: underline;
		transition: all 300ms ease-out;

		&:hover {
			color: rgba( 255, 255, 255, 0.55 );
		}
	}

	p {
		line-height: 1.125;
	}

	ul {
		margin-bottom: 15px;
		margin-left: 15px;

		li {
			margin-bottom: 10px;
		}
	}
}

.portfolio-images-container {
	text-align: center;

	button.view-portfolio {
		font-size: 12px;
		position: relative;
		top: -40px;
		text-transform: uppercase;
		background: rgba( 255, 255, 255, 0.35 );
		border-style: solid;
		border: 1px #FFF solid;
		color: #FFF;
		padding: 5px 10px;
		border-radius: 5px;
		margin-bottom: -60px;
		display:inline-block;
	}
}

.portfolio-image {
	width: 100%;
	border-radius: 5px;
	margin-bottom: 10px;
	height: 115px;
	object-fit: cover;
	box-shadow: 0px 0px 70px rgba( 0, 0, 0, 1) inset;
	border: 1px rgba( 255, 255, 255, 0.35 ) solid;

	&.large {
		width: 90%;
		height: auto;
	}
}

.portfolio-container {
	transform-style: preserve-3d;
	transition: all 300ms ease-out;
	opacity: 1;

	&.hide {
		opacity: 0.25;
	}
}

.launch-portfolio {
	cursor: pointer;
}

.portfolio-viewer {
	position: fixed;
	top: 0px;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: rgba( 0, 0, 0, 0.75 );
	transform-style: preserve-3d;
	transition: all 300ms ease-out;
	opacity: 0;
	display: none;
	padding-top: 50px;
	overflow: auto;
	text-align: center;

	&.show {
		opacity: 1;
	}
}

.terms {
	margin: 0;
	padding: 0;
	font-size: $small;
	text-transform: uppercase;
	display: inline-block;

	span {
		color: #fff;
		opacity: $half;
	}

	strong {
		opacity: 1;
	}
}

.meta {
	color: rgba( 255, 255, 255, 0.55 );
	margin-bottom: 20px;
}

.popup{
	cursor: pointer;

	.portfolio-description {
		display: none;
	}
}

.portfolio-description {
	width: 90%;
	text-align: center;
	margin: 25px auto 10px auto;

	p {
		font-size: 20px;
		text-align: left;
	}
}

.portfolio-description.show {
	display: block;
}

form{
	div {
		display: flex;
		padding: 0px 0px 10px 0px;
		label {
			flex: 1 2;
			color: #fff;
			font-size: 12px;
			padding-top: 5px;
			text-transform: uppercase;
		}
		input,textarea {
			flex: 2 1;
		}
	}

	input, textarea {
		color: $orange;
		padding: 10px 10px;
		border-style: none;
		background: #fff;
		border-radius: 5px;

	}

	.contact-submit {
		text-align: right;


	}
}

.form-error {
	background: rgba( 255, 255, 255, 0.25 );
	padding: 10px;
	border-radius: 5px;
	margin-bottom: 20px;
	padding: 20px;
	h3 {
		font-size: 18px;
	}
	h3, li {
		color: $orange;
	}
}

#wdi_feed_0 {
	.wdi_feed_wrapper {
		background-color: transparent !important;
	}
	.wdi_feed_container {
		background: transparent !important;
		border-bottom-width: 0px !important;

		.wdi_feed_info h3{
			color: #fff !important;
		}

		.wdi_follow_btn,
		.wdi_pagination_container {
			display: none !important;
		}

		.wdi_photo_wrap_inner {
			border: 0px !important;
			padding: 5px;
			background: transparent !important;
			.wdi_photo_img {
				border-radius: 5px !important;
			}
			 img {
				 width: 170px;
				 height: 170px;
				 object-fit: cover;
			 }
		}

	}
}

#footer {
	text-transform: uppercase;
}

